Rearrange cards order and fixed a grammer mistake

--- a/index.html
+++ b/index.html
@@ -63,51 +63,59 @@
         <h1 class="jumbotron-heading text-center">Portfolio</h1>
         <div class="row">
           <div class="card">
-            <img src="imgs/superhero.jpg">
-            <p class="card-text text-center">Meet your new superhero! He needs you more than ever. Only you can keep him safe. Can you take the challenge?<br>Tech Stack: Unity 3D (C#), Blender 3D.</p>
-            <a href="https://play.google.com/store/apps/details?id=com.GamifyStudios.SuperHeroJump&hl=en" class="btn btn-danger btn-sm">Download</a>
+            <img src="imgs/autonotes.jpg">
+            <h6 class="text-center">autoNotes</h6>
+            <p class="card-text text-center">This is an automatic note taker, where it transforms the professor's speech to text during lectures.<br>Tech Stack: Javascript, Microsoft Speech SDK.</p>
+            <a href="https://devpost.com/software/accompanote" class="btn btn-primary btn-sm">View</a>
           </div>
           <div class="card">
             <img src="imgs/abc.jpg">
+            <h6 class="text-center">ABC VR</h6>
             <p class="card-text text-center">ABC VR is an educational application aimed at raising awareness of the importance of STEM Education.<br>Tech Stack: Unity 3D (C#), Blender 3D.</p>
             <a href="https://play.google.com/store/apps/details?id=com.GamifyStudios.ABCVR&hl=en" class="btn btn-danger btn-sm">Download</a>
           </div>
           <div class="card">
-            <img src="imgs/bump.jpg">
-            <p class="card-text text-center">Bump Ball is an interactive game that pushes the boundaries of your speed and reaction.<br>Tech Stack: Unity 3D (C#), Blender 3D.</p>
-            <a href="https://play.google.com/store/apps/details?id=com.GamifyStudios.BumpBall&hl=en" class="btn btn-danger btn-sm">Download</a>
-          </div>
-
-          <div class="card">
             <img src="imgs/memoranda.png">
+            <h6 class="text-center">Memoranda</h6>
             <p class="card-text text-center">The purpose of this project is to enhance the Memoranda app to support Time Management for programmers.<br>Tech Stack: Java, Eclipse IDE.</p>
             <a href="https://github.com/cst316/spring16project-Fortran" class="btn btn-primary btn-sm">View</a>
           </div>
           <div class="card">
             <img src="imgs/media.png">
+            <h6 class="text-center">Media Management System</h6>
             <p class="card-text text-center">This is a media management system project a part of a class on database management.<br>Tech Stack: PHP, MySQL, Apache Ant.</p>
             <a href="https://github.com/TalabH/MediaManagementSystem" class="btn btn-primary btn-sm">View</a>
           </div>
           <div class="card">
+            <img src="imgs/bump.jpg">
+            <h6 class="text-center">Bump Ball</h6>
+            <p class="card-text text-center">Bump Ball is an interactive game that pushes the boundaries of your speed and reaction.<br>Tech Stack: Unity 3D (C#), Blender 3D.</p>
+            <a href="https://play.google.com/store/apps/details?id=com.GamifyStudios.BumpBall&hl=en" class="btn btn-danger btn-sm">Download</a>
+          </div>
+          <div class="card">
             <img src="imgs/car.png">
+            <h6 class="text-center">Intelligent Interactive Infotainment System</h6>
             <p class="card-text text-center">Intelligent Interactive Infotainment System for the Software Enginneering Degree Capstone project.<br>Tech Stack: Matlab, Java, Android Studio.</p>
             <a href="https://github.com/mazaval4/carApp" class="btn btn-primary btn-sm">View</a>
           </div>
 
           <div class="card">
             <img src="imgs/anna.jpg">
+            <h6 class="text-center">Anna Therapist</h6>
             <p class="card-text text-center">Do you ever feel stressed, anxious, or down? Anna helps you feel stronger, happier, and more fulfilled.<br>Tech Stack: Javascript, Ionic.</p>
             <a href="https://devpost.com/software/hackarizona-2017-anna-therapist" class="btn btn-primary btn-sm">View</a>
           </div>
           <div class="card">
-            <img src="imgs/42.jpg">
-            <p class="card-text text-center">Our mixed reality game uses the Microsoft HoloLens. The user sees the game as holographic projections.<br>Tech Stack: Microsoft HoloLens, Unity 3D, Blender 3D.</p>
-            <a href="https://devpost.com/software/42-cqaj95" class="btn btn-primary btn-sm">View</a>
+            <img src="imgs/superhero.jpg">
+            <h6 class="text-center">SuperHero Jump</h6>
+            <p class="card-text text-center">Meet your new superhero! He needs you more than ever. Only you can keep him safe. Can you take the challenge?<br>Tech Stack: Unity 3D (C#), Blender 3D.</p>
+            <a href="https://play.google.com/store/apps/details?id=com.GamifyStudios.SuperHeroJump&hl=en" class="btn btn-danger btn-sm">Download</a>
           </div>
           <div class="card">
-            <img src="imgs/autonotes.jpg">
-            <p class="card-text text-center">This is an automatic note taker, where it transforms the professor's speech to text during lectures.<br>Tech Stack: Javascript, Microsoft Speech SDK.</p>
-            <a href="https://devpost.com/software/accompanote" class="btn btn-primary btn-sm">View</a>
+            <img src="imgs/42.jpg">
+            <h6 class="text-center">42</h6>
+            <p class="card-text text-center">Our mixed reality game uses the Microsoft HoloLens. The user sees the game as holographic projections.<br>Tech Stack: Microsoft HoloLens, Unity 3D, Blender 3D.</p>
+            <a href="https://devpost.com/software/42-cqaj95" class="btn btn-primary btn-sm">View</a>
           </div>
         </div>
 
