--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="row">
           <div class="col-sm-8 py-4">
             <h4 class="text-white">About</h4>
-            <p class="text-muted">I’m currently pursuing a bachelor’s degree in Software Engineering with a primary focus on Web and Mobile Development and a secondary focus on cybersecurity at Arizona State University. Currently seeking full-time opportunities for Spring 2018. Thank you very much for your time and consideration!</p>
+            <p class="text-muted">I’m currently pursuing a bachelor’s degree in Software Engineering with a primary focus on web and mobile Development and a secondary focus on cybersecurity at Arizona State University. Currently seeking full-time opportunities for Spring 2018. Thank you very much for your time and consideration!</p>
           </div>
           <div class="col-sm-4 py-4">
             <h4 class="text-white">Contact</h4>
@@ -65,19 +65,19 @@
           <div class="card">
             <img src="imgs/autonotes.jpg">
             <h6 class="text-center">autoNotes</h6>
-            <p class="card-text text-center">This is an automatic note taker, where it transforms the professor's speech to text during lectures.<br>Tech Stack: Javascript, Microsoft Speech SDK.</p>
+            <p class="card-text text-center">This is an automatic note taker that transforms the professor's speech to text during lectures.<br>Tech Stack: Javascript, Microsoft Speech SDK.</p>
             <a href="https://devpost.com/software/accompanote" class="btn btn-primary btn-sm">View</a>
           </div>
           <div class="card">
             <img src="imgs/abc.jpg">
             <h6 class="text-center">ABC VR</h6>
-            <p class="card-text text-center">ABC VR is an educational application aimed at raising awareness of the importance of STEM Education.<br>Tech Stack: Unity 3D (C#), Blender 3D.</p>
+            <p class="card-text text-center">ABC VR is an educational application aimed at raising awareness of the importance of STEM education.<br>Tech Stack: Unity 3D (C#), Blender 3D.</p>
             <a href="https://play.google.com/store/apps/details?id=com.GamifyStudios.ABCVR&hl=en" class="btn btn-danger btn-sm">Download</a>
           </div>
           <div class="card">
             <img src="imgs/memoranda.png">
             <h6 class="text-center">Memoranda</h6>
-            <p class="card-text text-center">The purpose of this project is to enhance the Memoranda app to support Time Management for programmers.<br>Tech Stack: Java, Eclipse IDE.</p>
+            <p class="card-text text-center">The purpose of this project is to enhance the Memoranda app to support Time Management for developers.<br>Tech Stack: Java, Eclipse IDE.</p>
             <a href="https://github.com/cst316/spring16project-Fortran" class="btn btn-primary btn-sm">View</a>
           </div>
           <div class="card">
@@ -108,13 +108,13 @@
           <div class="card">
             <img src="imgs/superhero.jpg">
             <h6 class="text-center">SuperHero Jump</h6>
-            <p class="card-text text-center">Meet your new superhero! He needs you more than ever. Only you can keep him safe. Can you take the challenge?<br>Tech Stack: Unity 3D (C#), Blender 3D.</p>
+            <p class="card-text text-center">Meet your new superhero! He needs you more than ever. Only you can keep him safe! Can you take the challenge?<br>Tech Stack: Unity 3D (C#), Blender 3D.</p>
             <a href="https://play.google.com/store/apps/details?id=com.GamifyStudios.SuperHeroJump&hl=en" class="btn btn-danger btn-sm">Download</a>
           </div>
           <div class="card">
             <img src="imgs/42.jpg">
             <h6 class="text-center">42</h6>
-            <p class="card-text text-center">Our mixed reality game uses the Microsoft HoloLens. The user sees the game as holographic projections.<br>Tech Stack: Microsoft HoloLens, Unity 3D, Blender 3D.</p>
+            <p class="card-text text-center">This mixed reality game uses the Microsoft HoloLens. The user sees the game as holographic projections.<br>Tech Stack: Microsoft HoloLens, Unity 3D, Blender 3D.</p>
             <a href="https://devpost.com/software/42-cqaj95" class="btn btn-primary btn-sm">View</a>
           </div>
         </div>
