--- a/index.html
+++ b/index.html
@@ -18,38 +18,16 @@
   </head>
 
   <body>
-
-    <div class="collapse bg-inverse" id="navbarHeader">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-8 py-4">
-            <h4 class="text-white">About</h4>
-            <p class="text-muted">I’m currently pursuing a bachelor’s degree in Software Engineering with a primary focus on web and mobile Development and a secondary focus on cybersecurity at Arizona State University. Currently seeking full-time opportunities for Spring 2018. Thank you very much for your time and consideration!</p>
-          </div>
-          <div class="col-sm-4 py-4">
-            <h4 class="text-white">Contact</h4>
-            <ul class="list-unstyled">
-              <li><h6 class="text-white">Phone: 480-729-0213</h6></li>
-              <li><h6 class="text-white">Email: Talab.Hussein@asu.edu</h6></li> 
-              <li><h6 class="text-white">Location: Arizona, USA</h6></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="navbar navbar-inverse bg-inverse">
+    <div class="navbar navbar-inverse bg-inverse fixed-top">
       <div class="container d-flex justify-content-between">
-        <a href="#" class="navbar-brand">Talab Hussein</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+        <span style="color: grey;" class="lead"> <a style="color: white;" href="index.html" class="navbar-brand">Talab Hussein </a> Software Engineer & Entrepreneur</span>
       </div>
     </div>
 
     <section class="jumbotron text-center">
       <div class="container">
         <h1 class="jumbotron-heading">Talab Hussein</h1>
-        <p class="lead text-muted">Undergraduate Software Engineering student at Arizona State University. Currently seeking full-time opportunities for Spring 2018.</p>
+        <p class="lead text-muted">Undergraduate Software Engineering student at Arizona State University.</p>
         <p>
           <a href="https://www.linkedin.com/in/talabhussein/" class="btn btn-primary">LinkedIn</a>
           <a href="resume.pdf" class="btn btn-secondary">Resume</a>
@@ -136,13 +114,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://v4-alpha.getbootstrap.com/dist/js/bootstrap.min.js"></script>
     <script>
-	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-	  ga('create', 'UA-85375982-3', 'auto');
-	  ga('send', 'pageview');
-	</script>
+  	  ga('create', 'UA-85375982-3', 'auto');
+  	  ga('send', 'pageview');
+  	</script>
   </body>
 </html>
