--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
 
   <body>
-    <div class="navbar navbar-inverse bg-inverse fixed-top">
+    <div class="navbar navbar-inverse bg-inverse">
       <div class="container d-flex justify-content-between">
         <span style="color: grey;" class="lead"> <a style="color: white;" href="index.html" class="navbar-brand">Talab Hussein </a> Software Engineer & Entrepreneur</span>
       </div>
