--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section class="jumbotron text-center">
       <div class="container">
         <h1 class="jumbotron-heading">Talab Hussein</h1>
-        <p class="lead text-muted">Undergraduate Software Engineering student at Arizona State University.</p>
+        <p class="lead text-muted">Undergraduate Software Engineering student at Arizona State University</p>
         <p>
           <a href="https://www.linkedin.com/in/talabhussein/" class="btn btn-primary">LinkedIn</a>
           <a href="https://www.github.com/talabh" class="btn btn-info">GitHub</a>
@@ -42,13 +42,13 @@
           <div class="card">
             <img src="imgs/autonotes.jpg">
             <h6 class="text-center">autoNotes</h6>
-            <p class="card-text text-center">This is an automatic note taker that transforms the professor's speech to text during lectures.<br>Tech Stack: Javascript, Microsoft Speech SDK.</p>
+            <p class="card-text text-center">This is an automatic note taker that transforms the professor's speech to text during lectures.<br>Tech Stack: JavaScript, Microsoft Speech SDK.</p>
             <a href="https://devpost.com/software/accompanote" class="btn btn-primary btn-sm">View</a>
           </div>
           <div class="card">
             <img src="imgs/abc.jpg">
             <h6 class="text-center">ABC VR</h6>
-            <p class="card-text text-center">ABC VR is an educational application aimed at raising awareness of the importance of STEM education.<br>Tech Stack: Unity 3D (C#), Blender 3D.</p>
+            <p class="card-text text-center">ABC VR is an educational mobile app aimed at raising awareness of the importance of STEM education.<br>Tech Stack: Unity 3D (C#), Blender 3D.</p>
             <a href="https://play.google.com/store/apps/details?id=com.GamifyStudios.ABCVR&hl=en" class="btn btn-danger btn-sm">Download</a>
           </div>
           <div class="card">
@@ -79,7 +79,7 @@
           <div class="card">
             <img src="imgs/anna.jpg">
             <h6 class="text-center">Anna Therapist</h6>
-            <p class="card-text text-center">Do you ever feel stressed, anxious, or down? Anna helps you feel stronger, happier, and more fulfilled.<br>Tech Stack: Javascript, Ionic.</p>
+            <p class="card-text text-center">Do you ever feel stressed, anxious, or down? Anna helps you feel stronger, happier, and more fulfilled.<br>Tech Stack: JavaScript, Ionic.</p>
             <a href="https://devpost.com/software/hackarizona-2017-anna-therapist" class="btn btn-primary btn-sm">View</a>
           </div>
           <div class="card">
@@ -95,7 +95,6 @@
             <a href="https://devpost.com/software/42-cqaj95" class="btn btn-primary btn-sm">View</a>
           </div>
         </div>
-
       </div>
     </div>
 
