added responsive grid layout

--- a/index.html
+++ b/index.html
@@ -35,7 +35,86 @@
       </div>
     </section>
 
-    <div class="album text-muted">
+    <section id="portfolio" class="bg-light-gray">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h1 class="jumbotron-heading">Portfolio</h1>
+          </div>
+        </div>
+        <div class="row text-center">
+          <div class="col-sm-4">
+            <div class="team-member">
+              <img src="imgs/autonotes.jpg" class="img-responsive img-circle">
+              <h4>autoNotes</h4>
+              <p class="card-text">This is an automatic note taker that transforms the professor's speech to text during lectures.<br>Tech Stack: JavaScript, Microsoft Speech SDK.</p>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="team-member">
+              <img src="imgs/abc.jpg" class="img-responsive img-circle">
+              <h4>ABC VR</h4>
+              <p class="card-text">ABC VR is an educational mobile app aimed at Raising awareness of STEM Careers.<br>Tech Stack: Unity 3D (C#), Blender 3D.</p>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="team-member">
+              <img src="imgs/memoranda.png" class="img-responsive img-circle">
+              <h4>Memoranda</h4>
+              <p class="card-text">A group project to enhance the Memoranda app to support Time Management for developers.<br>Tech Stack: Java, Eclipse IDE.</p>
+            </div>
+          </div>
+        </div>
+        <div class="row text-center">
+          <div class="col-sm-4">
+            <div class="team-member">
+              <img src="imgs/media.png" class="img-responsive img-circle">
+              <h4>Media Management System</h4>
+              <p class="card-text">This is a media management system project a part of a class on database management.<br>Tech Stack: PHP, MySQL, Apache Ant.</p>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="team-member">
+              <img src="imgs/superhero.jpg" class="img-responsive img-circle">
+              <h4>Superhero Jump</h4>
+              <p class="card-text">Bump Ball is an interactive game that pushes the boundaries of your speed and reaction.<br>Tech Stack: Unity 3D (C#), Blender 3D.</p>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="team-member">
+              <img src="imgs/car.png" class="img-responsive img-circle">
+              <h4>Intelligent Infotainment System</h4>
+              <p class="card-text text-center">Intelligent Interactive Infotainment System for the Software Enginneering Capstone project.<br>Tech Stack: Matlab, Java, Android Studio.</p>
+            </div>
+          </div>
+        </div>
+        <div class="row text-center">
+          <div class="col-sm-4">
+            <div class="team-member">
+              <img src="imgs/anna.jpg" class="img-responsive img-circle">
+              <h4>Anna Therapist</h4>
+              <p class="card-text">Anna helps you feel stronger, happier, and more fulfilled.<br>Tech Stack: JavaScript, Ionic.</p>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="team-member">
+              <img src="imgs/bump.jpg" class="img-responsive img-circle">
+              <h4>Bump Ball</h4>
+              <p class="card-text">Meet your new superhero! He needs you more than ever. Only you can keep him safe!<br>Tech Stack: Unity 3D (C#), Blender 3D.</p>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="team-member">
+              <img src="imgs/42.jpg" class="img-responsive img-circle">
+              <h4>42</h4>
+              <p class="card-text">Mixed reality game in which the user sees the game as holographic projections.<br>Tech Stack: Microsoft HoloLens, Unity3D.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!--<div class="album text-muted">
       <div class="container">
         <h1 class="jumbotron-heading text-center">Portfolio</h1>
         <div class="row">
@@ -96,7 +175,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <footer class="text-muted">
       <div class="container">
