--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section class="jumbotron text-center">
       <div class="container">
         <h1 class="jumbotron-heading">Talab Hussein</h1>
-        <p class="lead text-muted">Undergraduate Software Engineering student at Arizona State University</p>
+        <p class="lead text-muted">Software Engineering student at Arizona State University</p>
         <p>
           <a href="https://www.linkedin.com/in/talabhussein/" class="btn btn-primary">LinkedIn</a>
           <a href="https://www.github.com/talabh" class="btn btn-info">GitHub</a>
@@ -48,6 +48,7 @@
               <img src="imgs/autonotes.jpg" class="img-responsive img-circle">
               <h4>autoNotes</h4>
               <p class="card-text">This is an automatic note taker that transforms the professor's speech to text during lectures.<br>Tech Stack: JavaScript, Microsoft Speech SDK.</p>
+              <a href="https://devpost.com/software/accompanote" class="btn btn-primary btn-block">View</a><br>
             </div>
           </div>
           <div class="col-sm-4">
@@ -55,6 +56,7 @@
               <img src="imgs/abc.jpg" class="img-responsive img-circle">
               <h4>ABC VR</h4>
               <p class="card-text">ABC VR is an educational mobile app aimed at Raising awareness of STEM Careers.<br>Tech Stack: Unity 3D (C#), Blender 3D.</p>
+              <a href="https://play.google.com/store/apps/details?id=com.GamifyStudios.ABCVR&hl=en" class="btn btn-danger btn-block">Download</a><br>
             </div>
           </div>
           <div class="col-sm-4">
@@ -62,6 +64,7 @@
               <img src="imgs/memoranda.png" class="img-responsive img-circle">
               <h4>Memoranda</h4>
               <p class="card-text">A group project to enhance the Memoranda app to support Time Management for developers.<br>Tech Stack: Java, Eclipse IDE.</p>
+              <a href="https://github.com/cst316/spring16project-Fortran" class="btn btn-primary btn-block">View</a><br>
             </div>
           </div>
         </div>
@@ -71,6 +74,7 @@
               <img src="imgs/media.png" class="img-responsive img-circle">
               <h4>Media Management System</h4>
               <p class="card-text">This is a media management system project a part of a class on database management.<br>Tech Stack: PHP, MySQL, Apache Ant.</p>
+              <a href="https://github.com/TalabH/MediaManagementSystem" class="btn btn-primary btn-block">View</a><br>
             </div>
           </div>
           <div class="col-sm-4">
@@ -78,6 +82,7 @@
               <img src="imgs/superhero.jpg" class="img-responsive img-circle">
               <h4>Superhero Jump</h4>
               <p class="card-text">Bump Ball is an interactive game that pushes the boundaries of your speed and reaction.<br>Tech Stack: Unity 3D (C#), Blender 3D.</p>
+              <a href="https://play.google.com/store/apps/details?id=com.GamifyStudios.SuperHeroJump&hl=en" class="btn btn-danger btn-block">Download</a><br>
             </div>
           </div>
           <div class="col-sm-4">
@@ -85,6 +90,7 @@
               <img src="imgs/car.png" class="img-responsive img-circle">
               <h4>Intelligent Infotainment System</h4>
               <p class="card-text text-center">Intelligent Interactive Infotainment System for the Software Enginneering Capstone project.<br>Tech Stack: Matlab, Java, Android Studio.</p>
+              <a href="https://github.com/mazaval4/carApp" class="btn btn-primary btn-block">View</a><br>
             </div>
           </div>
         </div>
@@ -94,6 +100,7 @@
               <img src="imgs/anna.jpg" class="img-responsive img-circle">
               <h4>Anna Therapist</h4>
               <p class="card-text">Anna helps you feel stronger, happier, and more fulfilled.<br>Tech Stack: JavaScript, Ionic.</p>
+              <a href="https://devpost.com/software/hackarizona-2017-anna-therapist" class="btn btn-primary btn-block">View</a><br>
             </div>
           </div>
           <div class="col-sm-4">
@@ -101,6 +108,7 @@
               <img src="imgs/bump.jpg" class="img-responsive img-circle">
               <h4>Bump Ball</h4>
               <p class="card-text">Meet your new superhero! He needs you more than ever. Only you can keep him safe!<br>Tech Stack: Unity 3D (C#), Blender 3D.</p>
+              <a href="https://play.google.com/store/apps/details?id=com.GamifyStudios.BumpBall&hl=en" class="btn btn-danger btn-block">Download</a><br>
             </div>
           </div>
           <div class="col-sm-4">
@@ -108,74 +116,12 @@
               <img src="imgs/42.jpg" class="img-responsive img-circle">
               <h4>42</h4>
               <p class="card-text">Mixed reality game in which the user sees the game as holographic projections.<br>Tech Stack: Microsoft HoloLens, Unity3D.</p>
+              <a href="https://devpost.com/software/42-cqaj95" class="btn btn-primary btn-block">View</a><br>
             </div>
           </div>
         </div>
       </div>
     </section>
-
-    <!--<div class="album text-muted">
-      <div class="container">
-        <h1 class="jumbotron-heading text-center">Portfolio</h1>
-        <div class="row">
-          <div class="card">
-            <img src="imgs/autonotes.jpg">
-            <h6 class="text-center">autoNotes</h6>
-            <p class="card-text text-center">This is an automatic note taker that transforms the professor's speech to text during lectures.<br>Tech Stack: JavaScript, Microsoft Speech SDK.</p>
-            <a href="https://devpost.com/software/accompanote" class="btn btn-primary btn-sm">View</a>
-          </div>
-          <div class="card">
-            <img src="imgs/abc.jpg">
-            <h6 class="text-center">ABC VR</h6>
-            <p class="card-text text-center">ABC VR is an educational mobile app aimed at raising awareness of the importance of STEM education.<br>Tech Stack: Unity 3D (C#), Blender 3D.</p>
-            <a href="https://play.google.com/store/apps/details?id=com.GamifyStudios.ABCVR&hl=en" class="btn btn-danger btn-sm">Download</a>
-          </div>
-          <div class="card">
-            <img src="imgs/memoranda.png">
-            <h6 class="text-center">Memoranda</h6>
-            <p class="card-text text-center">The purpose of this project is to enhance the Memoranda app to support Time Management for developers.<br>Tech Stack: Java, Eclipse IDE.</p>
-            <a href="https://github.com/cst316/spring16project-Fortran" class="btn btn-primary btn-sm">View</a>
-          </div>
-          <div class="card">
-            <img src="imgs/media.png">
-            <h6 class="text-center">Media Management System</h6>
-            <p class="card-text text-center">This is a media management system project a part of a class on database management.<br>Tech Stack: PHP, MySQL, Apache Ant.</p>
-            <a href="https://github.com/TalabH/MediaManagementSystem" class="btn btn-primary btn-sm">View</a>
-          </div>
-          <div class="card">
-            <img src="imgs/bump.jpg">
-            <h6 class="text-center">Bump Ball</h6>
-            <p class="card-text text-center">Bump Ball is an interactive game that pushes the boundaries of your speed and reaction.<br>Tech Stack: Unity 3D (C#), Blender 3D.</p>
-            <a href="https://play.google.com/store/apps/details?id=com.GamifyStudios.BumpBall&hl=en" class="btn btn-danger btn-sm">Download</a>
-          </div>
-          <div class="card">
-            <img src="imgs/car.png">
-            <h6 class="text-center">Intelligent Interactive Infotainment System</h6>
-            <p class="card-text text-center">Intelligent Interactive Infotainment System for the Software Enginneering Degree Capstone project.<br>Tech Stack: Matlab, Java, Android Studio.</p>
-            <a href="https://github.com/mazaval4/carApp" class="btn btn-primary btn-sm">View</a>
-          </div>
-
-          <div class="card">
-            <img src="imgs/anna.jpg">
-            <h6 class="text-center">Anna Therapist</h6>
-            <p class="card-text text-center">Do you ever feel stressed, anxious, or down? Anna helps you feel stronger, happier, and more fulfilled.<br>Tech Stack: JavaScript, Ionic.</p>
-            <a href="https://devpost.com/software/hackarizona-2017-anna-therapist" class="btn btn-primary btn-sm">View</a>
-          </div>
-          <div class="card">
-            <img src="imgs/superhero.jpg">
-            <h6 class="text-center">SuperHero Jump</h6>
-            <p class="card-text text-center">Meet your new superhero! He needs you more than ever. Only you can keep him safe! Can you take the challenge?<br>Tech Stack: Unity 3D (C#), Blender 3D.</p>
-            <a href="https://play.google.com/store/apps/details?id=com.GamifyStudios.SuperHeroJump&hl=en" class="btn btn-danger btn-sm">Download</a>
-          </div>
-          <div class="card">
-            <img src="imgs/42.jpg">
-            <h6 class="text-center">42</h6>
-            <p class="card-text text-center">This mixed reality game uses the Microsoft HoloLens. The user sees the game as holographic projections.<br>Tech Stack: Microsoft HoloLens, Unity 3D, Blender 3D.</p>
-            <a href="https://devpost.com/software/42-cqaj95" class="btn btn-primary btn-sm">View</a>
-          </div>
-        </div>
-      </div>
-    </div> -->
 
     <footer class="text-muted">
       <div class="container">
