--- a/index.html
+++ b/index.html
@@ -18,16 +18,10 @@
   </head>
 
   <body>
-    <div class="navbar navbar-inverse bg-inverse">
-      <div class="container d-flex justify-content-between">
-        <span style="color: grey;" class="lead"> <a style="color: white;" href="index.html" class="navbar-brand">Talab Hussein </a> Software Engineer & Entrepreneur</span>
-      </div>
-    </div>
-
     <section class="jumbotron text-center">
       <div class="container">
         <h1 class="jumbotron-heading">Talab Hussein</h1>
-        <p class="lead text-muted">Software Engineering student at Arizona State University</p>
+        <p class="lead text-muted">Software Engineer and Entrepreneur</p>
         <p>
           <a href="https://www.linkedin.com/in/talabhussein/" class="btn btn-primary">LinkedIn</a>
           <a href="https://www.github.com/talabh" class="btn btn-info">GitHub</a>
@@ -126,7 +120,7 @@
     <footer class="text-muted">
       <div class="container">
         <p class="float-right">
-          <a href="#">Back to top</a>
+          <a class="btn btn-primary" href="#">Back to top</a>
         </p>
         <p>Copyright © Talab Hussein 2017</p>
       </div>
