fix capital letters

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="team-member">
               <img src="imgs/abc.jpg" class="img-responsive img-circle">
               <h4>ABC VR</h4>
-              <p class="card-text">ABC VR is an educational mobile app aimed at Raising awareness of STEM Careers.<br>Tech Stack: Unity 3D (C#), Blender 3D.</p>
+              <p class="card-text">ABC VR is an educational mobile app aimed at raising awareness of STEM careers.<br>Tech Stack: Unity 3D (C#), Blender 3D.</p>
               <a href="https://play.google.com/store/apps/details?id=com.GamifyStudios.ABCVR&hl=en" class="btn btn-danger btn-block">Download</a><br>
             </div>
           </div>
@@ -57,7 +57,7 @@
             <div class="team-member">
               <img src="imgs/memoranda.png" class="img-responsive img-circle">
               <h4>Memoranda</h4>
-              <p class="card-text">A group project to enhance the Memoranda app to support Time Management for developers.<br>Tech Stack: Java, Eclipse IDE.</p>
+              <p class="card-text">A group project to enhance the Memoranda app to support time management for developers.<br>Tech Stack: Java, Eclipse IDE.</p>
               <a href="https://github.com/cst316/spring16project-Fortran" class="btn btn-primary btn-block">View</a><br>
             </div>
           </div>
@@ -67,7 +67,7 @@
             <div class="team-member">
               <img src="imgs/media.png" class="img-responsive img-circle">
               <h4>Media Management System</h4>
-              <p class="card-text">This is a media management system project a part of a class on database management.<br>Tech Stack: PHP, MySQL, Apache Ant.</p>
+              <p class="card-text">This project is a part of a class on database management.<br>Tech Stack: PHP, MySQL, Apache Ant.</p>
               <a href="https://github.com/TalabH/MediaManagementSystem" class="btn btn-primary btn-block">View</a><br>
             </div>
           </div>
