added Quora button and updated headline

--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
     <section class="jumbotron text-center">
       <div class="container">
         <h1 class="jumbotron-heading">Talab Hussein</h1>
-        <p class="lead text-muted">Software Engineer and Entrepreneur</p>
+        <p class="lead text-muted">Software Engineer & Entrepreneur</p>
         <p>
-          <a href="https://www.linkedin.com/in/talabhussein/" class="btn btn-primary">LinkedIn</a>
-          <a href="https://www.github.com/talabh" class="btn btn-info">GitHub</a>
+          <a href="https://www.linkedin.com/in/talabhussein/" class="btn btn-info">LinkedIn</a>
+          <a href="https://www.quora.com/profile/Talab-Hussein" class="btn btn-danger">Quora</a>
+          <a href="https://www.github.com/talabh" class="btn btn-primary">GitHub</a>
         </p>
       </div>
     </section>
