--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <p class="lead text-muted">Software Engineer & Entrepreneur</p>
         <p>
           <a href="https://www.linkedin.com/in/talabhussein/" class="btn btn-info">LinkedIn</a>
-          <a href="https://devpost.com/TalabH" class="btn btn-secondary">GitHub</a>
+          <a href="https://devpost.com/TalabH" class="btn btn-secondary">Devpost</a>
           <a href="https://www.github.com/talabh" class="btn btn-primary">GitHub</a>
         </p>
       </div>
